@@ -1,3 +1,12 @@
+Tue Nov  9 19:40:21 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
+        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
+          Resolved bugs in listener callbacks.
+
+        * connectors/dds4ccm/impl/logger/Logger_Service.cpp:
+          Enable trace when environment variable is set.
+
 Tue Nov  9 15:07:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ConditionManager_T.cpp:
